@@ -844,6 +844,10 @@ eom
     assert_valid_syntax %q{a b(c d), :e do end}, bug11873
     assert_valid_syntax %q{a b{c(d)}, :e do end}, bug11873
     assert_valid_syntax %q{a b(c(d)), :e do end}, bug11873
+    assert_valid_syntax %q{a b{c d}, 1 do end}, bug11873
+    assert_valid_syntax %q{a b(c d), 1 do end}, bug11873
+    assert_valid_syntax %q{a b{c(d)}, 1 do end}, bug11873
+    assert_valid_syntax %q{a b(c(d)), 1 do end}, bug11873
   end
 
   def test_block_after_cmdarg_in_paren
@@ -865,6 +869,15 @@ eom
         end
       end
     end
+  end
+
+  def test_do_after_local_variable
+    obj = Object.new
+    def obj.m; yield; end
+    result = assert_nothing_raised(SyntaxError) do
+      obj.instance_eval("m = 1; m do :ok end")
+    end
+    assert_equal(:ok, result)
   end
 
   private
